[gd_scene load_steps=8 format=3 uid="uid://bx56vnutkqrxg"]

[ext_resource type="Script" uid="uid://cej2bbnhg77pp" path="res://Scenes/Natu's Tests/Boss 2/boss_weakpoints.gd" id="1_dws73"]
[ext_resource type="Texture2D" uid="uid://crbov28ht1ere" path="res://Scenes/Natu's Tests/Boss 2/hit.png" id="1_h7i61"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dws73"]
size = Vector2(24, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_igkqb"]
atlas = ExtResource("1_h7i61")
region = Rect2(0, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y644q"]
atlas = ExtResource("1_h7i61")
region = Rect2(31, 0, 31, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhncw"]
atlas = ExtResource("1_h7i61")
region = Rect2(62, 0, 31, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6tfor"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igkqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y644q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhncw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="boss_weakpoints" type="Area2D"]
position = Vector2(-1, -1)
scale = Vector2(0.5, 0.5)
script = ExtResource("1_dws73")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_dws73")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, 0)
sprite_frames = SubResource("SpriteFrames_6tfor")
frame_progress = 0.938624

[node name="take_damage_cooldown" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
